--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -5,5 +5,6 @@
     --my_Yellow-light: #FFEC7A;
     --my_Grey: #B3B3B3;
     --my_Grey-light: #F8F8F8;
+    --my_Grey-text-p: #4f4f4f;
     --my_Red: #EB5757;
 }
