--- a/css/styly.css
+++ b/css/styly.css
@@ -133,7 +133,7 @@ body {
 }
 
 .footer {
-  height: 100px;
+  height: 300px;
 }
 
 .container {
@@ -623,4 +623,68 @@ body {
 
 /* //block 3 img */
 /* team! */
+.team__title {
+  margin-top: 150px;
+  font-family: "Bebas Neue";
+  font-size: 58px;
+  font-weight: 400;
+  line-height: 70px;
+  letter-spacing: 0.155em;
+  color: #333333;
+}
+.team__content {
+  position: relative;
+}
+.team__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  max-height: 507px;
+  margin-top: 143px;
+}
+.team__text {
+  width: 336px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--my_Grey-text-p);
+}
+.team__text p {
+  margin: 15px 0;
+}
+.team__img {
+  max-width: 677px;
+  max-height: 507px;
+  margin-left: 57px;
+}
+.team__rectangle {
+  position: absolute;
+  top: -5%;
+  left: -12%;
+  z-index: -1;
+}
+.team__upper-absolute-title, .team__lowercase-absolute-title {
+  font-family: "Bebas Neue";
+  font-size: 288px;
+  font-weight: 400;
+  line-height: 346px;
+  letter-spacing: 0.155em;
+  text-align: left;
+  position: absolute;
+  z-index: 1;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 1px var(--my_Turquoise);
+}
+.team__upper-absolute-title {
+  top: -22%;
+  left: -5.3%;
+}
+.team__lowercase-absolute-title {
+  right: -15%;
+  bottom: -57.5%;
+}
+
 /* //team! */
