--- a/scss/styly.scss
+++ b/scss/styly.scss
@@ -20,7 +20,7 @@ body {
 }
 
 .footer {
-    height: 100px;
+    height: 300px;
 }
 
 .container {
@@ -550,8 +550,83 @@ body {
         color: var(--my_Grey-text-p);
     }
 }
+
 /* //block 3 img */
 
 /* team! */
+.team {
 
+    &__title {
+        margin-top: 150px;
+        font-family: "Bebas Neue";
+        font-size: 58px;
+        font-weight: 400;
+        line-height: 70px;
+        letter-spacing: 0.155em;
+        color: #333333;
+    }
+
+    &__content {
+        position: relative;
+    }
+
+    &__block {
+        display: flex;
+        align-items: flex-end;
+        max-height: 507px;
+        margin-top: 143px;
+    }
+
+    &__text {
+        width: 336px;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+
+        color: var(--my_Grey-text-p);
+
+        p {
+            margin: 15px 0;
+        }
+    }
+
+    &__img {
+        max-width: 677px;
+        max-height: 507px;
+        margin-left: 57px;
+    }
+
+    &__rectangle {
+        position: absolute;
+        top: -5%;
+        left: -12%;
+        z-index: -1;
+    }
+
+    &__upper-absolute-title,
+    &__lowercase-absolute-title {
+        font-family: "Bebas Neue";
+        font-size: 288px;
+        font-weight: 400;
+        line-height: 346px;
+        letter-spacing: 0.155em;
+        text-align: left;
+
+        position: absolute;
+        z-index: 1;
+
+        -webkit-text-fill-color: transparent; // прозорий текст
+        -webkit-text-stroke: 1px var(--my_Turquoise); // бордер текста
+    }
+
+    &__upper-absolute-title {
+        top: -22%;
+        left: -5.3%;
+    }
+
+    &__lowercase-absolute-title {
+        right: -15%;
+        bottom: -57.5%;
+    }
+}
 /* //team! */
