--- a/scss/styly.scss
+++ b/scss/styly.scss
@@ -630,3 +630,18 @@ body {
     }
 }
 /* //team! */
+
+.burger-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 20px;
+    cursor: pointer;
+}
+
+.line {
+    width: 100%;
+    height: 3px;
+    background-color: #000;
+}
