--- a/css/styly.css
+++ b/css/styly.css
@@ -678,34 +678,57 @@ body {
   -webkit-text-fill-color: transparent;
   -webkit-text-stroke: 1px var(--my_Turquoise);
 }
+.team__upper-absolute-title span, .team__lowercase-absolute-title span {
+  letter-spacing: 0em;
+}
 .team__upper-absolute-title {
-  top: -22%;
+  top: -22.5%;
   left: -5.3%;
 }
 .team__lowercase-absolute-title {
-  right: -15%;
+  right: -11%;
   bottom: -57.5%;
+  max-width: 598px;
 }
 
 /* //team! */
-.burger-menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  width: 30px;
-  height: 20px;
-  cursor: pointer;
+/* Materials and Features */
+.special__block {
+  margin-top: 386px;
+  position: relative;
 }
-
-.line {
-  width: 100%;
-  height: 3px;
-  background-color: #000;
+.special__block img {
+  max-width: 1440px;
 }
+.special__main-title {
+  max-width: 875px;
+  font-family: "Bebas Neue";
+  font-size: 139px;
+  font-weight: 400;
+  line-height: 167px;
+  letter-spacing: 0.12em;
+  color: var(--my_Turquoise);
+  position: absolute;
+  top: -160px;
+  left: 135px;
+}
+.special__block-info {
+  width: 470px;
+  position: absolute;
+  top: 0;
+  right: 135px;
+}
+.special__title {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+  color: #4f4f4f;
+}
+.special__text {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #4f4f4f;
+  margin-top: 15px;
+}
+/* //Materials and Features */
