--- a/scss/styly.scss
+++ b/scss/styly.scss
@@ -617,31 +617,75 @@ body {
 
         -webkit-text-fill-color: transparent; // прозорий текст
         -webkit-text-stroke: 1px var(--my_Turquoise); // бордер текста
+
+        span {
+            letter-spacing: 0em;
+        }
     }
 
     &__upper-absolute-title {
-        top: -22%;
+        top: -22.5%;
         left: -5.3%;
     }
 
     &__lowercase-absolute-title {
-        right: -15%;
+        right: -11%;
         bottom: -57.5%;
+        max-width: 598px;
     }
 }
+
 /* //team! */
 
-.burger-menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 30px;
-    height: 20px;
-    cursor: pointer;
+/* Materials and Features */
+.special {
+
+    &__block {
+        margin-top: 386px;
+        position: relative;
+
+        img {
+            max-width: 1440px;
+        }
+    }
+
+    &__main-title {
+        max-width: 875px;
+        font-family: "Bebas Neue";
+        font-size: 139px;
+        font-weight: 400;
+        line-height: 167px;
+        letter-spacing: 0.12em;
+        color: var(--my_Turquoise);
+
+        position: absolute;
+        top: -160px;
+        left: 135px;
+    }
+
+    &__block-info {
+        width: 470px;
+        position: absolute;
+        top: 0;
+        right: 135px;
+    }
+
+    &__title {
+        font-size: 20px;
+        font-weight: 700;
+        line-height: 30px;
+        color: #4f4f4f;
+    }
+
+    &__text {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        color: #4f4f4f;
+        margin-top: 15px;
+    }
+
+    &__plus {}
 }
 
-.line {
-    width: 100%;
-    height: 3px;
-    background-color: #000;
-}
+/* //Materials and Features */
