Додав якийсь блок

--- a/scss/styly.scss
+++ b/scss/styly.scss
@@ -2,6 +2,11 @@
 @import "colors";
 @import "fonts";
 
+/* Meet the POTR team! */
+
+/* Meet the POTR team! */
+
+
 html,
 body {
     height: 100%;
@@ -48,7 +53,6 @@ body {
         width: 475px;
         display: flex;
         justify-content: space-between;
-
     }
 
     &__item {
@@ -634,7 +638,6 @@ body {
         max-width: 598px;
     }
 }
-
 /* //team! */
 
 /* Materials and Features */
@@ -687,5 +690,44 @@ body {
 
     &__plus {}
 }
-
 /* //Materials and Features */
+
+/* footer */
+.info {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 74px;
+
+    &__adress {
+        width: 170px;
+    }
+
+    &__title {
+        font-family: "Bebas Neue";
+        font-size: 24px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0.155em;
+        text-align: left;
+    }
+
+    &__block {}
+
+    &__social-networks {
+        a {
+            width: 30px;
+            height: 30px;
+            background-color: #000;
+        }
+    }
+
+    &__logo {}
+
+    &__our-rights {
+
+
+    }
+
+    &__copy {}
+}
+/* footer */
