--- a/css/styly.css
+++ b/css/styly.css
@@ -108,6 +108,8 @@ h6 {
   font-family: "Manrope";
 }
 
+/* Meet the POTR team! */
+/* Meet the POTR team! */
 html,
 body {
   height: 100%;
@@ -732,3 +734,30 @@ body {
   margin-top: 15px;
 }
 /* //Materials and Features */
+/* footer */
+.info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 74px;
+}
+.info__adress {
+  width: 170px;
+}
+.info__title {
+  font-family: "Bebas Neue";
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.155em;
+  text-align: left;
+}
+.info__social-networks a {
+  width: 30px;
+  height: 30px;
+  background-color: #000;
+}
+/* footer */
