--- a/scss/styly.scss
+++ b/scss/styly.scss
@@ -2,10 +2,6 @@
 @import "colors";
 @import "fonts";
 
-/* Meet the POTR team! */
-
-/* Meet the POTR team! */
-
 
 html,
 body {
@@ -18,14 +14,11 @@ body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
+    background-color: #f8f8f8;
 }
 
 .main {
     flex: 1 1 auto;
-}
-
-.footer {
-    height: 300px;
 }
 
 .container {
@@ -638,6 +631,7 @@ body {
         max-width: 598px;
     }
 }
+
 /* //team! */
 
 /* Materials and Features */
@@ -688,18 +682,30 @@ body {
         margin-top: 15px;
     }
 
-    &__plus {}
+    &__plus {
+        
+    }
 }
 /* //Materials and Features */
 
 /* footer */
 .info {
+    height: 296px;
     display: flex;
     justify-content: space-between;
     margin-top: 74px;
 
     &__adress {
         width: 170px;
+
+        a {
+            display: block;
+            margin-top: 10px;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 24px;
+            color: #000;
+        }
     }
 
     &__title {
@@ -709,25 +715,44 @@ body {
         line-height: 24px;
         letter-spacing: 0.155em;
         text-align: left;
+        color: #000;
     }
 
-    &__block {}
+    &__block {
+    text-align: center;
+    }
 
     &__social-networks {
+        width: 230px;
+        display: flex;
+        justify-content: space-between;
+
         a {
             width: 30px;
             height: 30px;
-            background-color: #000;
         }
     }
 
-    &__logo {}
-
-    &__our-rights {
-
-
+    &__logo {
+        display: block;
+        margin-top: 74px;
+        font-family: "Bebas Neue";
+        font-size: 36px;
+        font-weight: 400;
+        line-height: 54px;
+        letter-spacing: 0.155em;
+        color: #000;
     }
 
-    &__copy {}
+    &__our-rights {}
+
+    &__copy {
+        margin-top: 10px;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        color: #000;
+    }
 }
+
 /* footer */
